test/libsolidity/syntaxTests/events/double_event_declaration_ignores_anonymous.sol
contract test {
    event A(uint i);
    event A(uint i) anonymous;
}
// ----
// DeclarationError 5883: (20-36='event A(uint i);'): Event with same name and parameter types defined twice.
